--- a/css/custom.css
+++ b/css/custom.css
@@ -15,11 +15,9 @@ input[type="range"].colour-picker { background: -webkit-linear-gradient(left, #F
 }
 ::-webkit-scrollbar-thumb:hover { background: var(--col-theme-dark); }
 
-
 /* CUSTOM CLASSES */
-.bg-error { background-color: var(--col-alert); }
-.text-error { color: var(--col-alert); }
-
+.bg-error { background-color: var(--col-error); }
+.text-error { color: var(--col-error); }
 
 /* NAVIGATION - DROPDOWN*/
 .drop-down {
@@ -27,19 +25,22 @@ input[type="range"].colour-picker { background: -webkit-linear-gradient(left, #F
   display: flex;
   flex-direction: column-reverse;
 }
-/*.drop-down:focus-within * { background: red; }*/
+.drop-down:focus-within * { background: red; }
+
 .drop-down-button {
   cursor: pointer;
   padding-right: 2.75rem;
 }
 .drop-down-button::after {
   content: "▼"; /*U+25BC*/
+  font-size: 85%;
   position: absolute;
   top: 0;
   right: calc(var(--font-size) * 0.1);
   padding: calc(var(--space-1) + (var(--font-size) * 0.1));
-  font-size: 80%;
+  transition: transform 0.1s;
 }
+
 .drop-down.active > .drop-down-button::after { transform: rotateZ(180deg); }
 .drop-down-inside, .drop-down-outside {
   display: none;
@@ -47,7 +48,7 @@ input[type="range"].colour-picker { background: -webkit-linear-gradient(left, #F
   font-size: 85%;
   max-height: 100%;
 }
-.drop-down-inside > *, .drop-down-outside > * { background: #333; }
+.drop-down-inside > *, .drop-down-outside > * { background-color: rgba(200, 200, 200, 50%) }
 .drop-down.active :is(.drop-down-inside, .drop-down-outside) { display: flex; }
 .drop-down-outside {
   position: absolute;
@@ -59,7 +60,7 @@ side-nav .drop-down-outside {
   left: 100%;
 }
 side-nav .drop-down-outside + .drop-down-button::after { transform: rotateZ(-90deg); /*U+25B6*/ }
-side-nav .drop-down.active > .drop-down-outside + .drop-down-button::after { transform: rotateZ(90deg); /*U+25B6*/ }
+side-nav .drop-down.active > .drop-down-outside + .drop-down-button::after { transform: rotateZ(-30deg); /*U+25B6*/ }
 
 /* DARK MODE / OVERRIDES variables.css's prefers-color-scheme */
 .dark {
@@ -67,17 +68,3 @@ side-nav .drop-down.active > .drop-down-outside + .drop-down-button::after { tra
   --col-black: var(--col-const-white);
 }
 /* .dark ::-webkit-calendar-picker-indicator { filter: invert(1); } */
-
-.floating-label {
-  position: relative;
-}
-.floating-label > input {
-  padding: 0.5rem;
-  padding-top: 1.5rem;
-}
-.floating-label > label {
-  position: absolute;
-  top: 0.3rem;
-  left: 0.5rem;
-  font-size: 85%;
-}
