--- a/css/layout.css
+++ b/css/layout.css
@@ -1,24 +1,20 @@
 *, *::before, *::after { box-sizing: border-box; }
 body {
-  background: var(--col-white);
-  color: var(--col-black);
   font-family: var(--font-family-content);
   font-kerning: normal;
   font-size: var(--font-size);
-  letter-spacing: 0.01rem;
   display: block;
   margin: 0;
   margin-left: calc(var(--show-side-nav) * var(--side-nav-width));
 }
 nav, side-nav {
-  background: var(--col-nav);
-  color: var(--col-const-white);
-  z-index: 100;
+  background-color: inherit;
+  font-family: var(--font-family-heading);
+  z-index: 1;
   position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
-  font-family: var(--font-family-heading);
 }
 :is(nav, side-nav) :is(p, a) {
   color: inherit;
@@ -28,7 +24,7 @@ nav, side-nav {
   text-decoration: none;
   white-space: nowrap;
 }
-:is(nav, side-nav) :is(p, a):hover { background: var(--col-theme-dark); }
+:is(nav, side-nav) :is(p, a):hover { background: var(--col-theme-light); }
 side-nav {
   position: fixed;
   top: 0;
